Updating customer forms + implmenting new phone validation + some new select2

--- a/app/admin/media/css/style.css
+++ b/app/admin/media/css/style.css
@@ -115,17 +115,14 @@ a:not(.btn):hover {
 	cursor: pointer;
 }
 
-.alert-icon {
-	padding: 0.95rem;
-	padding-right: 0px;
-}
+/*
 .alert-message {
 	padding: 0.96rem;
 }
 .alert {
 	display: flex;
 	padding: 0;
-}
+} */
 
 .card-link {
 	cursor: pointer;
