--- a/app/admin/template/administrative/customer/contact.twig
+++ b/app/admin/template/administrative/customer/contact.twig
@@ -11,7 +11,7 @@
 
 <div class="row">
 	{% for customer_contact in customer_contacts %}
-		<div class="col-3">
+		<div class="col-3 mb-3">
 			<div class="card customer_contact h-100" data-customer-contact-id="{{ customer_contact.id }}">
 				<div class="card-body">
 					<span class="badge bg-secondary actions visually-hidden">
