--- a/app/admin/template/administrative/customer/export.twig
+++ b/app/admin/template/administrative/customer/export.twig
@@ -23,14 +23,14 @@
 <form class="form-horizontal" method="post" action="/administrative/customer?action=export">
 	<div class="card text-bg-light">
 		<div class="card-body">
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-form-label col-3 text-end">{% trans "Total number of customers" %}</label>
 				<div class="col-9">
 					<p class="form-control-plaintext" id="total_amount">{{ pager.item_count }}</p>
 				</div>
 			</div>
 
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-form-label col-3 text-end">{% trans "Export format" %}</label>
 				<div class="col-4">
 					<select name="export_format" class="form-control">
@@ -39,7 +39,7 @@
 				</div>
 			</div>
 
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<div class="col-9 offset-3">
 					<button type="submit" class="btn btn-primary">
 						{% trans "Download" %}
