--- a/app/admin/template/bookkeeping/account/detail.twig
+++ b/app/admin/template/bookkeeping/account/detail.twig
@@ -14,17 +14,17 @@
 
 
 	<form method="post" action="/bookkeeping/account/detail?id={{ bookkeeping_account.id }}">
-		<div class="row mb-3 {% if 'number' in errors|keys %} has-error{% endif %}">
+		<div class="row mb-1 mb-md-3 {% if 'number' in errors|keys %} has-error{% endif %}">
 			<label class="col-form-label col-3 text-end">{% trans "Number" %}</label>
 			<div class="col-5"><input type="text" name="bookkeeping_account[number]" class="form-control" value="{{ bookkeeping_account.number }}"/></div>
 		</div>
 
-		<div class="row mb-3">
+		<div class="row mb-1 mb-md-3">
 			<label class="col-form-label col-3 text-end">{% trans "Name" %}</label>
 			<div class="col-5"><input type="text" name="bookkeeping_account[name]" class="form-control" value="{{ bookkeeping_account.name }}"/></div>
 		</div>
 
-		<div class="row mb-3">
+		<div class="row mb-1 mb-md-3">
 			<div class="col-3 offset-3">
 				<button class="btn btn-primary">
 					{% trans "Save" %}
