--- a/app/admin/template/export.twig
+++ b/app/admin/template/export.twig
@@ -16,7 +16,7 @@
 			</div>
 			<div class="card-body">
 				<form method="post" action="/export">
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-2 col-form-label text-end">{% trans "Search" %}</label>
 						<div class="col-9">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
