--- a/app/admin/template/financial/account/transaction/modal.bookkeeping_account.twig
+++ b/app/admin/template/financial/account/transaction/modal.bookkeeping_account.twig
@@ -26,7 +26,7 @@
 
 <h5>2. {% trans "Search bookkeeping accounts" %}</h5>
 	<form action="{{ env.module.get_module_path() }}?action=edit&id={{ transaction.id }}" method="post" class="form-horizontal form-condensed" id="search_bookkeeping_accounts">
-	<div class="row mb-3">
+	<div class="row mb-1 mb-md-3">
 		<label class="col-form-label col-3 text-end">{% trans "Search bookkeeping account" %}</label>
 		<div class="col-6">
 			<div class="input-group">
@@ -58,7 +58,7 @@
 		{% trans "There is a problem with the amounts you have entered." %} {% trans "The total amount cannot exceed the amount of the transaction" %}.
 	</div>
 
-	<div class="row mb-3">
+	<div class="row mb-1 mb-md-3">
 		<label class="col-form-label col-3 text-end">{% trans "Link with bookkeeping account" %}</label>
 		<div class="col-4">
 			<div class="input-group">
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 
-	<div class="row mb-3">
+	<div class="row mb-1 mb-md-3">
 		<div class="col-9 offset-3">
 			<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 		</div>
