--- a/app/admin/template/sales/creditnote/create/step1.twig
+++ b/app/admin/template/sales/creditnote/create/step1.twig
@@ -38,7 +38,7 @@
 				<select name="invoice_id" class="form-select autocomplete_invoice"></select>
 			</div>
 
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<div class="col-3 offset-3">
 					<button class="btn btn-primary">
 						{% trans "Next" %}
