--- a/app/admin/template/sales/creditnote/export.twig
+++ b/app/admin/template/sales/creditnote/export.twig
@@ -29,7 +29,7 @@
 <form method="post" action="/sales/creditnote?action=export">
 <div class="card text-bg-light">
 	<div class="card-body">
-		<div class="row mb-3 {% if errors.months is defined %}has-error{% endif %}">
+		<div class="row mb-1 mb-md-3 {% if errors.months is defined %}has-error{% endif %}">
 			<label class="col-3 col-form-label">{% trans "Export invoices" %}</label>
 			<div class="col-9">
 				<select name="months[]" class="form-control multiselect" multiple="multiple">
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 
-		<div class="row mb-3">
+		<div class="row mb-1 mb-md-3">
 			<label class="col-3 col-form-label">{% trans "Export format" %}</label>
 			<div class="col-9">
 				<select name="export_format" class="form-control">
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 
-		<div class="row mb-3">
+		<div class="row mb-1 mb-md-3">
 			<div class="col-9 offset-3">
 				<button type="submit" class="btn btn-primary">
 					{% trans "Download" %}
