--- a/app/admin/template/sales/invoice/offcanvas.twig
+++ b/app/admin/template/sales/invoice/offcanvas.twig
@@ -108,7 +108,7 @@
 				</div>
 			</div>
 
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-form-label">{% trans "Internal reference" %}</label>
 				<div class="col-9">
 					<input class="form-control col-5" type="text" name="invoice[internal_reference]" value="{{ invoice.internal_reference }}" {% if invoice.paid %}disabled{% endif %}>
