--- a/app/admin/template/setting/extractor/pdf/modal.select_document.twig
+++ b/app/admin/template/setting/extractor/pdf/modal.select_document.twig
@@ -7,7 +7,7 @@
 	<form action="/setting/extractor/pdf?action=change_document&id={{ env.get.id }}" method="post" class="form-horizontal">
 
 
-	<div class="row mb-3">
+	<div class="row mb-1 mb-md-3">
 		<label class="col-form-label col-3 text-end">{% trans "Name" %}</label>
 		<div class="col-8">
 			<input type="text" id="autocomplete_document" class="form-control"/>
