--- a/app/admin/template/user.twig
+++ b/app/admin/template/user.twig
@@ -43,7 +43,7 @@
 			</div>
 			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/user?action=edit&id={{ user.id }}">
-					<div class="row mb-3{% if 'username' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'username' in errors|keys %} has-error{% endif %}">
 						<label for="username" class="col-form-label col-3 text-end">{% trans "Username" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[username]" id="username" class="form-control" value="{{ user.username }}">
@@ -51,7 +51,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
 						<label for="firstname" class="col-form-label col-3 text-end">{% trans "Firstname" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[firstname]" id="firstname" class="form-control" value="{{ user.firstname }}">
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
 						<label for="lastname" class="col-form-label col-3 text-end">{% trans "Lastname" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[lastname]" id="lastname" class="form-control" value="{{ user.lastname }}">
@@ -67,7 +67,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'email' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'email' in errors|keys %} has-error{% endif %}">
 						<label for="email" class="col-form-label col-3 text-end">{% trans "Email" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[email]" id="email" class="form-control" value="{{ user.email }}">
@@ -75,7 +75,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'password' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'password' in errors|keys %} has-error{% endif %}">
 						<label for="password" class="col-form-label col-3 text-end">{% trans "Password" %}</label>
 						<div class="col-9">
 							<input type="password" name="user[password]" id="password" class="form-control" value="DONOTUPDATEME">
@@ -83,7 +83,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Language" %}</label>
 						<div class="col-4">
 							<select name="user[language_id]" id="language_id" class="form-control">
@@ -94,7 +94,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Role" %}</label>
 						<div class="col-4">
 							<select name="user[role_id]" id="language_id" class="form-control">
@@ -105,14 +105,14 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Receive expired invoice overview" %}</label>
 						<div class="col-4">
 							<input type="checkbox" data-group-cls="btn-group-xs" name="user[receive_expired_invoice_overview]"{% if user.receive_expired_invoice_overview == 1 %} checked{% endif %}>
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
@@ -144,7 +144,7 @@
 			</div>
 			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/user?action=add">
-					<div class="row mb-3{% if 'username' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'username' in errors|keys %} has-error{% endif %}">
 						<label for="username" class="col-form-label col-3 text-end">{% trans "Username" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[username]" id="username" class="form-control" value="{{ env.post.user.username }}">
@@ -152,7 +152,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
 						<label for="firstname" class="col-form-label col-3 text-end">{% trans "Firstname" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[firstname]" id="firstname" class="form-control" value="{{ env.post.user.firstname }}">
@@ -160,7 +160,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
 						<label for="lastname" class="col-form-label col-3 text-end">{% trans "Lastname" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[lastname]" id="lastname" class="form-control" value="{{ env.post.user.lastname }}">
@@ -168,7 +168,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'email' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'email' in errors|keys %} has-error{% endif %}">
 						<label for="email" class="col-form-label col-3 text-end">{% trans "Email" %}</label>
 						<div class="col-9">
 							<input type="text" name="user[email]" id="email" class="form-control" value="{{ env.post.user.email }}">
@@ -176,7 +176,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'password' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'password' in errors|keys %} has-error{% endif %}">
 						<label for="password" class="col-form-label col-3 text-end">{% trans "Password" %}</label>
 						<div class="col-9">
 							<input type="password" name="user[password]" id="password" class="form-control" value="{{ env.post.user.password }}">
@@ -184,7 +184,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Language" %}</label>
 						<div class="col-4">
 							<select name="user[language_id]" id="language_id" class="form-control">
@@ -195,7 +195,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Role" %}</label>
 						<div class="col-4">
 							<select name="user[role_id]" id="language_id" class="form-control">
@@ -206,14 +206,14 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label for="language_id" class="col-form-label col-3 text-end">{% trans "Receive expired invoice overview" %}</label>
 						<div class="col-4">
 							<input type="checkbox" data-group-cls="btn-group-xs" name="user[receive_expired_invoice_overview]">
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
