--- a/app/admin/template/_default/macro.base.twig
+++ b/app/admin/template/_default/macro.base.twig
@@ -1,43 +1,47 @@
 {% macro display_flash_message(message, object_string) %}
 	{% if message == 'error_delete' %}
-	<div class="alert alert-danger alert-dismissable">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<div class="alert alert-danger alert-dismissible fade show" role="alert">
 		<strong>{% trans "Error" %}</strong> {{ "Could not delete selected %object_string%"|trans|replace({'%object_string%': object_string|capitalize})|raw }}
+  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% elseif message == 'created' %}
-	<div class="alert alert-success alert-dismissable">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<div class="alert alert-success alert-dismissible fade show" role="alert">
 		{{ "%object_string% successfully created."|trans|replace({'%object_string%': object_string|capitalize})|raw }}
+  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% elseif message == 'updated' %}
-	<div class="alert alert-success alert-dismissable">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<div class="alert alert-success alert-dismissible" role="alert">
 		{{ "%object_string% successfully updated"|trans|replace({'%object_string%': object_string|capitalize})|raw }}
+  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% elseif message == 'deleted' %}
-	<div class="alert alert-success alert-dismissable">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	<div class="alert alert-success alert-dismissible fade show" role="alert">
 		{{ "%object_string% successfully removed"|trans|replace({'%object_string%': object_string|capitalize})|raw }}
+  		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	{% endif %}
 
 {% endmacro display_flash_message %}
 
 {% macro alert(type, message, hide = false) %}
-    <div class="alert alert-{{ type }} {% if hide %}d-none{% endif %}" role="alert">
-        <div class="alert-icon">
-            {% if type == "primary" or type == "secondary" or type == "info" %}
-                <i class="align-middle" data-feather="info"></i>
-            {% elseif type == "success" %}
-                <i class="align-middle" data-feather="check-circle"></i>
-            {% elseif type == "danger" or type == "warning" %}
-                <i class="align-middle" data-feather="alert-triangle"></i>
-            {% endif %}
-        </div>
-        <div class="alert-message">
-            {{ message }}
-        </div>
-    </div>
+<div class="row offset-md-2">
+	<div class="col-md-10">
+		<div class="alert alert-{{ type }} {% if hide %}d-none{% endif %} d-flex align-items-center" role="alert">
+			<div>
+				{% if type == "primary" or type == "secondary" or type == "info" %}
+					<i data-feather="info" style="width:24px;height:24px;"></i>
+				{% elseif type == "success" %}
+					<i data-feather="check-circle" style="width:24px;height:24px;"></i>
+				{% elseif type == "danger" or type == "warning" %}
+					<i data-feather="alert-triangle" style="width:24px;height:24px;"></i>
+				{% endif %}
+			</div>
+			<div class="ms-1">
+				{{ message|raw }}
+			</div>
+		</div>
+	</div>
+</div>
 {% endmacro %}
 
 
