--- a/app/admin/template/administrative/incoming.twig
+++ b/app/admin/template/administrative/incoming.twig
@@ -156,13 +156,13 @@
 			</div>
 			<div class="card-body">
 				<form method="post" action="/administrative/incoming" class="form-horizontal">
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
 						<div class="col-9">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Search" %}
