--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -69,14 +69,14 @@
 			</div>
 			<div class="card-body">
 				<form method="post" action="/administrative/customer" class="form-horizontal">
-					<div class="row mb-3">
-						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
+					<div class="row mb-1 mb-md-3">
+						<label class="col-form-label col-12 col-md-3 text-md-end">{% trans "Search" %}</label>
 						<div class="col-9">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
-					<div class="row mb-3">
-						<div class="col-3 offset-3">
+					<div class="row mb-1 mb-md-3">
+						<div class="col-3 offset-2">
 							<button class="btn btn-primary">
 								{% trans "Search" %}
 							</button>
