--- a/app/admin/template/administrative/user/detail.twig
+++ b/app/admin/template/administrative/user/detail.twig
@@ -7,56 +7,53 @@
 
 	<form class="form form-horizontal form-condensed" method="post" action="/administrative/user/detail?id={{ user.id }}">
 		{% if errors is defined %}
-			<div class="alert alert-danger">
-				{% trans "The form contains mistakes. Please correct them." %}
-			</div>
+			{{ base.alert('danger', "The form contains mistakes. Please correct them."|trans) }}
 		{% elseif env.sticky_session.message is defined %}
 			{{ base.display_flash_message(env.sticky_session.message, 'user') }}
 		{% endif %}
 
-
-		<div class="row mb-3{% if 'username' in errors|keys %} has-error{% endif %}">
-			<label for="username" class="col-form-label col-3 text-end">{% trans "Username" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="username" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Username" %}</label>
 			<div class="col-9">
-				<input type="text" name="user[username]" id="username" class="form-control" value="{{ user.username }}">
+				<input type="text" name="user[username]" id="username" class="form-control {% if 'username' in errors|keys %} is-invalid{% endif %}" value="{{ user.username }}">
 				{{ form.invalid_input('username', errors) }}
 			</div>
 		</div>
 
-		<div class="row mb-3{% if 'firstname' in errors|keys %} has-error{% endif %}">
-			<label for="firstname" class="col-form-label col-3 text-end">{% trans "Firstname" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="firstname" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Firstname" %}</label>
 			<div class="col-9">
-				<input type="text" name="user[firstname]" id="firstname" class="form-control" value="{{ user.firstname }}">
+				<input type="text" name="user[firstname]" id="firstname" class="form-control {% if 'firstname' in errors|keys %} is-invalid{% endif %}" value="{{ user.firstname }}">
 				{{ form.invalid_input('firstname', errors) }}
 			</div>
 		</div>
 
-		<div class="row mb-3{% if 'lastname' in errors|keys %} has-error{% endif %}">
-			<label for="lastname" class="col-form-label col-3 text-end">{% trans "Lastname" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="lastname" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Lastname" %}</label>
 			<div class="col-9">
-				<input type="text" name="user[lastname]" id="lastname" class="form-control" value="{{ user.lastname }}">
+				<input type="text" name="user[lastname]" id="lastname" class="form-control {% if 'lastname' in errors|keys %} is-invalid{% endif %}" value="{{ user.lastname }}">
 				{{ form.invalid_input('lastname', errors) }}
 			</div>
 		</div>
 
-		<div class="row mb-3{% if 'email' in errors|keys %} has-error{% endif %}">
-			<label for="email" class="col-form-label col-3 text-end">{% trans "Email" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="email" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Email" %}</label>
 			<div class="col-9">
-				<input type="text" name="user[email]" id="email" class="form-control" value="{{ user.email }}">
+				<input type="text" name="user[email]" id="email" class="form-control {% if 'email' in errors|keys %} is-invalid{% endif %}" value="{{ user.email }}">
 				{{ form.invalid_input('email', errors) }}
 			</div>
 		</div>
 
-		<div class="row mb-3{% if 'password' in errors|keys %} has-error{% endif %}">
-			<label for="password" class="col-form-label col-3 text-end">{% trans "Password" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="password" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Password" %}</label>
 			<div class="col-9">
-				<input type="password" name="user[password]" id="password" class="form-control" value="DONOTUPDATEME">
+				<input type="password" name="user[password]" id="password" class="form-control {% if 'password' in errors|keys %} is-invalid{% endif %}" value="DONOTUPDATEME">
 				{{ form.invalid_input('password', errors) }}
 			</div>
 		</div>
 
-		<div class="row mb-3">
-			<label for="language_id" class="col-form-label col-3 text-end">{% trans "Language" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="language_id" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Language" %}</label>
 			<div class="col-4">
 				<select name="user[language_id]" id="language_id" class="form-control">
 					{% for language in languages %}
@@ -66,8 +63,8 @@
 			</div>
 		</div>
 
-		<div class="row mb-3">
-			<label for="language_id" class="col-form-label col-3 text-end">{% trans "Role" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="language_id" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Role" %}</label>
 			<div class="col-4">
 				<select name="user[role_id]" id="language_id" class="form-control">
 					{% for role in roles %}
@@ -77,15 +74,15 @@
 			</div>
 		</div>
 
-		<div class="row mb-3">
-			<label for="language_id" class="col-form-label col-3 text-end">{% trans "Receive expired invoice overview" %}</label>
+		<div class="row mb-1 mb-md-3">
+			<label for="language_id" class="col-form-label col-12 col-md-3 text-md-end">{% trans "Receive expired invoice overview" %}</label>
 			<div class="col-4">
 				<div class="form-check form-switch form-control-plaintext">
 				<input type="checkbox" data-group-cls="btn-group-xs" name="user[receive_expired_invoice_overview]"{% if user.receive_expired_invoice_overview == 1 %} checked{% endif %} class="form-check-input">
 			</div>
 		</div>
 
-		<div class="row mb-3">
+		<div class="row mb-1 mb-md-3">
 			<div class="col-3 offset-3">
 				<button class="btn btn-primary">
 					{% trans "Save" %}
