--- a/app/admin/template/administrative/user/mobile.twig
+++ b/app/admin/template/administrative/user/mobile.twig
@@ -21,30 +21,32 @@
 
 {% for mobile in mobiles %}
 	{% if loop.first %}
-		<table class="table table-hover table-striped table-condensed table-responsive">
-		<thead>
-			<tr>
-				<th>{% trans "Smartphone" %}</th>
-				<th>{% trans "Registered" %}</th>
-				<th width="20">&nbsp;</th>
-			</tr>
-		</thead>
-		<tbody>
-	{% endif %}
+	<div class="table-responsive">
+		<table class="table table-hover table-striped table-condensed">
+			<thead>
+				<tr>
+					<th>{% trans "Smartphone" %}</th>
+					<th>{% trans "Registered" %}</th>
+					<th width="20">&nbsp;</th>
+				</tr>
+			</thead>
+			<tbody>
+		{% endif %}
 
-	<tr>
-		<td>{{ mobile.name }}</td>
-		<td>{{ mobile.registered|datetime }}</td>
-		<td>
-			<a href="/administrative/user/mobile?id={{ user.id }}&action=delete&mobile_id={{ mobile.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete this mobile device?" %}">
-				<i data-feather="trash"></i>
-			</a>
-		</td>
-	</tr>
+		<tr>
+			<td>{{ mobile.name }}</td>
+			<td>{{ mobile.registered|datetime }}</td>
+			<td>
+				<a href="/administrative/user/mobile?id={{ user.id }}&action=delete&mobile_id={{ mobile.id }}" data-confirm-title="{% trans "Please confirm" %}" data-confirm-message="{% trans "Are you sure you want to delete this mobile device?" %}">
+					<i data-feather="trash"></i>
+				</a>
+			</td>
+		</tr>
 
 	{% if loop.last %}
-		</tbody>
+			</tbody>
 		</table>
+	</div>
 	{% endif %}
 {% else %}
 	<p>{% trans "There are no mobile devices registered." %}</p>
