--- a/app/admin/template/sales/invoice.twig
+++ b/app/admin/template/sales/invoice.twig
@@ -6,221 +6,7 @@
 
 	{% if action == 'edit' %}
 
-		<div class="row">
-			<div class="col">
-				<h4>{% trans "Invoices" %}</h4>
-			</div>
-			<div class="col">
-				<div class="float-end">
-					<nav aria-label="breadcrumb">
-						<ol class="breadcrumb">
-							<li class="breadcrumb-item">
-								<a href="/sales/invoice">
-									{% trans "Invoices" %}
-								</a>
-							</li>
-							<li class="breadcrumb-item active">
-								{% trans "Invoice" %} {{ invoice.number }}
-							</li>
-						</ol>
-					</nav>
-				</div>
-			</div>
-		</div>
-
-		{% include 'sales/invoice/offcanvas.twig' %}
-
-		{% if env.sticky_session.message == 'updated' %}
-			<div class="alert alert-success alert-dismissible fade show" role="alert">
-				{{ "Invoice successfully updated and regenerated" }}
-				<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-			</div>
-		{% endif %}
-
-		<div class="row">
-			<div class="col-md-4" id="invoice-customer">
-				<address>
-					<div class="text-muted">{% trans "Customer" %}</div>
-					<strong>{{ invoice.customer.get_display_name() }}</strong><br>
-					{{ invoice.customer.street }} {{ invoice.customer.housenumber }}<br>
-					{{ invoice.customer.zipcode }} {{ invoice.customer.city }}<br>
-					{{ attribute(invoice.customer.country, 'text_' ~ env.language.name_short ~ '_name') }}<br>
-					<a href="mailto:{{ invoice.customer.email }}">{{ invoice.customer.email }}</a>
-				</address>
-			</div>
-
-			<div class="col-md-4" id="invoice-contact">
-				<address>
-					<div class="text-muted">{% trans "Invoice to" %}</div>
-					<strong>{{ invoice.customer_contact.get_display_name() }}</strong><br>
-					{{ invoice.customer_contact.street }} {{ invoice.customer_contact.housenumber }}<br>
-					{{ invoice.customer_contact.zipcode }} {{ invoice.customer_contact.city }}<br>
-					{{ attribute(invoice.customer_contact.country, 'text_' ~ env.language.name_short ~ '_name') }}<br>
-					<a href="mailto:{{ invoice.customer_contact.email }}">{{ invoice.customer_contact.email }}</a><br>
-					{{ invoice.customer_contact.get_vat_formatted() }}
-				</address>
-			</div>
-
-			<div class="col-md-4">
-				<strong>{% trans "Invoice number" %}: </strong>{{ invoice.number }}<br>
-				<strong>{% trans "Paid" %}: </strong>
-					{% if invoice.paid %}
-						<span class="badge text-bg-success">{% trans "Yes" %}</span>
-					{% else %}
-						<span class="badge text-bg-danger">{% trans "No" %}</span>
-					{% endif %}
-				<br>
-
-				<button class="mt-3 btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-					{% trans "More information" %} >>
-				</button>
-			</div>
-		</div>
-
-		<hr>
-
-		<table class="table table-striped table-hover table-condensed">
-			<thead>
-				<tr>
-					<th>{% trans "Product" %}</th>
-					<th width="50%">{% trans "Description" %}</th>
-					<th width="95">{% trans "VAT" %}</th>
-					<th width="95">{% trans "Qty" %}</th>
-					<th class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right" width="95">{% trans "Item ex. VAT" %}</th>
-					<th class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right" width="95">{% trans "Item inc. VAT" %}</th>
-					<th class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right" width="95">{% trans "Total ex. VAT" %}</th>
-					<th class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right" width="95">{% trans "Total inc. VAT" %}</th>
-				</tr>
-			</thead>
-			<tbody>
-			{% for invoice_item in invoice.get_invoice_items() %}
-
-				<tr>
-					<td>{% if invoice_item.product_type_id is defined %}{{ invoice_item.product_type.name }}{% else %}<i>{% trans "Unknown" %}</i>{% endif %}</td>
-					<td>{{ invoice_item.description|nl2br }}</td>
-					<td>{{ invoice_item.vat_rate_value|number_format }}%</td>
-					<td>{{ invoice_item.qty|number_format }}</td>
-					<td class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ (invoice_item.qty != 0 ? invoice_item.get_price_excl()/invoice_item.qty : invoice_item.price_excl)|number_format }}</td>
-					<td class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ (invoice_item.qty != 0 ? invoice_item.get_price_incl()/invoice_item.qty : invoice_item.price_incl)|number_format }}</td>
-					<td class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right">&euro;{{ invoice_item.get_price_excl()|number_format }}</td>
-					<td class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right">&euro;{{ invoice_item.get_price_incl()|number_format }}</td>
-				</tr>
-			{% endfor %}
-			<tr>
-				<td colspan="6"><strong>{% trans "Total" %}</strong></td>
-				<td class="{% if invoice.vat_mode == 'line' %}text-muted{% endif %} text-right"><strong>&euro;{{ invoice.get_price_excl()|number_format }}</strong></td>
-				<td class="{% if invoice.vat_mode == 'group' %}text-muted{% endif %} text-right"><strong>&euro;{{ invoice.get_price_incl()|number_format }}</strong></td>
-			</tr>
-			</tbody>
-		</table>
-
-		<table class="table table-striped table-hover table-condensed">
-			<thead>
-				<th>{% trans "VAT Rate" %}</th>
-				<th class="text-right" width="95">{% trans "Base" %}</th>
-				<th class="text-right" width="95">{% trans "VAT" %}</th>
-			</thead>
-			<tbody>
-			{% set vat_total = 0 %}
-			{% for invoice_vat in invoice.get_invoice_vat() %}
-				{% set vat_total = vat_total + invoice_vat.vat %}
-				<tr>
-					<td>{{ invoice_vat.vat_rate.name }} ({{ invoice_vat.rate }}%)</td>
-					<td class="text-right">&euro;{{ invoice_vat.base }}</td>
-					<td class="text-right">&euro;{{ invoice_vat.vat }}</td>
-				</tr>
-			{% endfor %}
-			</tbody>
-			<tr>
-				<td colspan="2"><strong>{% trans "Total" %}</strong></td>
-				<td class="text-right"><strong>&euro;{{ vat_total|number_format }}</strong></td>
-			</tr>
-		</table>
-
-		<hr>
-
-		{% include 'sales/invoice/modal.transfer.twig' with {id: 'add_transfer', 'invoice': invoice}  %}
-
-		<div class="row">
-			<div class="col-12">
-				<div class="card text-bg-light">
-				<div class="card-body">
-					<div class="row">
-						<div class="col">
-							<h5>{% trans "Payments" %}</h5>
-						</div>
-						<div class="col">
-							<div class="pull-right">
-								<a href="#add_transfer" data-bs-toggle="modal">
-									<i data-feather="plus"></i> {% trans "Add Payment" %}
-								</a>
-							</div>
-						</div>
-					</div>
-					{% for transfer in invoice.get_transfers() %}
-						{% if loop.first %}
-							<table class="table table-hover table-alternate">
-								<thead>
-									<tr>
-										<th width="5%">{% trans "Date" %}</th>
-										<th>&nbsp;</th>
-										<th>{% trans "Message" %}</th>
-										<th>{% trans "To" %}</th>
-										<th>{% trans "Account number" %}</th>
-										<th>{% trans "Amount" %}</th>
-									</tr>
-								</thead>
-								<tbody>
-						{% endif %}
-
-						{% if transfer.bank_account_statement_transaction_balance_id > 0 %}
-							{% set transaction = transfer.bank_account_statement_transaction_balance.bank_account_statement_transaction %}
-							<tr>
-								<td>{{ transaction.date|date }}</td>
-								<td>
-									<a href="/financial/account/transaction?action=edit&id={{ transaction.id }}">
-										{% trans "Transaction" %} {{ transaction.id }}
-									</a>
-								</td>
-								<td>{{ transaction.get_message()|truncate(120) }}</td>
-								<td>{{ transaction.other_account_name }}</td>
-								<td>{{ transaction.other_account_number|iban_to_human_format }}</td>
-								<td>&euro;{{ transfer.bank_account_statement_transaction_balance.amount|number_format }}</td>
-							</tr>
-						{% else %}
-							<tr>
-								<td>{{ transfer.created|date }}</td>
-								<td colspan="4">
-									{% trans "Manual added payment" %}
-								</td>
-								<td>&euro;{{ transfer.amount|number_format }}</td>
-							</tr>
-						{% endif %}
-						{% if loop.last %}
-							</tbody>
-							<thead>
-								<tr>
-									<th colspan="5">{% trans "Total" %}</th>
-									<th>&euro;{{ invoice.get_transfer_amount()|number_format }}</th>
-								</tr>
-							</thead>
-							</table>
-						{% endif %}
-					{% else %}
-						<p>{% trans "No payments added yet" %}</p>
-					{% endfor %}
-				</div>
-			</div>
-		</div>
-
-		<script type="text/javascript">
-
-			$(function() {
-				$('#invoice-details, #invoice-settings').find('.card-body').equaliseHeights();
-				$('#invoice-customer, #invoice-contact').find('.card-body').equaliseHeights();
-			});
-
-		</script>
+		{% include 'sales/invoice/edit.twig' %}
 
 	{% elseif action == 'create_step1' %}
 
@@ -252,14 +38,14 @@
 			</div>
 			<div class="card-body">
 				<form method="post" action="/sales/invoice">
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-2 col-form-label text-end">{% trans "Search" %}</label>
 						<div class="col-9">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-sm-2 col-form-label text-end">{% trans "Paid" %}</label>
 						<div class="col-sm-9">
 							<select name="paid" class="form-control">
@@ -272,7 +58,7 @@
 
 					{% set conditions = pager.get_conditions() %}
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-sm-2 col-form-label text-end">{% trans "Date" %}</label>
 						<div class="col-sm-9">
 							<input type="text" name="date" class="form-control" id="invoice_date" >
