--- a/app/admin/template/sales/invoice/queue/create/step2.twig
+++ b/app/admin/template/sales/invoice/queue/create/step2.twig
@@ -1,11 +1,26 @@
-<ol class="breadcrumb">
-	<li><a href="/">{% trans "Home" %}</a></li>
-	<li><a href="/sales/invoice/queue" title="">{% trans "Invoice queue" %}</a></li>
-	<li>{% trans "Create invoice queue item" %}</li>
-	<li class="active">{% trans "Select invoice contact" %}</li>
-</ol>
+{% import '_default/macro.base.twig' as base %}
 
-{% include 'administrative/customer/modal.customer_contact.twig' with {'id': 'manage-customer-contact'} %}
+<div class="row">
+	<div class="col">
+		<h4>{% trans "Invoice Queue" %}</h4>
+	</div>
+	<div class="col">
+		<div class="float-end">
+			<nav aria-label="breadcrumb">
+				<ol class="breadcrumb">
+					<li class="breadcrumb-item">
+						<a href="/sales/invoice/queue">
+							{% trans "Invoice queue" %}
+						</a>
+					</li>
+					<li class="breadcrumb-item active">
+						{% trans "Create invoice queue item" %}
+					</li>
+				</ol>
+			</nav>
+		</div>
+	</div>
+</div>
 
 {% if errors is defined %}
 <div class="alert alert-danger">
@@ -15,41 +30,38 @@
 
 <div class="card">
 	<div class="card-header">
-		{% trans "Select a invoice contact" %}
+		{% trans "Select invoice contact" %}
 	</div>
 	<div class="card-body">
 
 		<div class="row">
 		{% for customer_contact in customer_contacts %}
-			<div class="col-3 customer_contact" id="customer-contact-{{ customer_contact.id }}">
-				<div class="card">
-					<div class="card-body{% if customer_contacts|length == 1 %} bg-info{% endif %}">
-						<div class="actions hide">
-							<a href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
+			<div class="col-3 mb-3">
+				<div class="card customer_contact h-100" data-customer-contact-id="{{ customer_contact.id }}">
+					<div class="card-body">
+						<span class="badge bg-secondary actions visually-hidden">
+							<a href="#manage-customer-contact" class="text-white" data-bs-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contact-id="{{ customer_contact.id }}">
 								<i data-feather="edit"></i>
 							</a>
-							<a href="javascript:void(0);" onclick="delete_contact({{ customer_contact.id }})">
-								<span class="glyphicon glyphicon-remove"></span>
+							<a href="javascript:void(0);" class="text-white" onclick="delete_contact({{ customer_contact.id }})">
+								<i data-feather="trash-2"></i>
 							</a>
+						</span>
 
-						</div>
-
-						{% if customer_contact.company != '' %}{{ customer_contact.company }}<br>{% endif %}
-						{{ customer_contact.firstname }} {{ customer_contact.lastname }}<br>
-						{{ customer_contact.street }} {{ customer_contact.housenumber }}<br>
-						{{ customer_contact.zipcode }} {{ customer_contact.city }}<br>
-						{{ attribute(customer_contact.country, 'text_' ~ env.language.name_short ~ '_name') }}
-						{% if customer_contact.vat != '' %}<br>{{ customer_contact.get_vat_formatted() }}{% endif %}
+						{{ base.customer_contact(customer_contact, settings) }}
 					</div>
 				</div>
 			</div>
 		{% endfor %}
-			<div class="col-3">
-				<div class="card">
-					<div class="card-body text-center">
-						<a class="btn btn-default" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="{{ customer_contacts|length }}">
-							{% trans "Create new" %}
-						</a>
+			<div class="col-3 mb-3">
+				<div class="card h-100">
+					<div class="card-body d-flex h-100 w-100 text-center">
+						<div class="align-self-center w-100">
+							<a class="btn btn-primary" href="#manage-customer-contact" data-toggle="modal" data-customer-id="{{ customer.id }}" data-customer-contacts="0">
+								{% trans "Create new contact" %}
+							</a>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -57,11 +69,10 @@
 
 		<form method="post" action="/sales/invoice/queue?action=create_step2" id="invoice-queue-create-step2">
 			<input type="hidden" name="customer_contact_id" value="{% if customer_contacts|length == 1 %}{{ customer_contacts.0.id }}{% endif %}">
-			<button class="btn btn-primary">
+			<button class="btn btn-primary pull-right">
 				{% trans "Next" %}
 			</button>
 		</form>
-
 	</div>
 </div>
 
@@ -69,15 +80,17 @@
 
 	$('.customer_contact').on({
 		mouseenter: function() {
-			$(this).find('.actions').toggleClass('hide');
+			$(this).find('.actions').toggleClass('visually-hidden');
 		},
 		mouseleave: function() {
-			$(this).find('.actions').toggleClass('hide');
+			$(this).find('.actions').toggleClass('visually-hidden');
 		},
 		click: function() {
-			$('.customer_contact').find('.card-body').removeClass('bg-info');
-			$(this).find('.card-body').first().addClass('bg-info');
-			$('#invoice-queue-create-step2 input').val($(this).prop('id').replace('customer-contact-', ''));
+			$('.customer_contact').find('input[type=radio]').prop('checked', false);
+			$('.customer_contact.card').removeClass('border-primary');
+			$(this).addClass('border-primary');
+			$('#invoice-create-step2 input').val($(this).prop('id').replace('customer-contact-', ''));
+			$('input[name=customer_contact_id]').val( $(this).data('customer-contact-id') );
 		}
 	});
 
@@ -85,7 +98,7 @@
 		$.get('/sales/invoice/contact?action=delete&id=' + id, function(data) {
 			if(data['status'] == 1) {
 				$('#customer-contact-' + id).remove();
-				$('#invoice-queue-create-step2 input').val('');
+				$('#invoice-create-step2 input').val('');
 			} else {
 				alert('Error deleting contact');
 			}
