--- a/app/admin/template/sales/invoice/queue/edit.twig
+++ b/app/admin/template/sales/invoice/queue/edit.twig
@@ -34,7 +34,7 @@
 	</div>
 	<div class="card-body">
 		<form method="post" action="/sales/invoice/queue?action=edit&id={{ invoice_queue.id }}" class="form-horizontal form-condensed">
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "Customer" %}</label>
 				<div class="col-6">
 					<p class="form-control-plaintext">
@@ -44,7 +44,7 @@
 					</p>
 				</div>
 			</div>
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "Invoice contact" %}</label>
 				<div class="col-6">
 					<p class="form-control-plaintext">
@@ -59,10 +59,10 @@
 				</div>
 			</div>
 
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "Product definition" %}</label>
-				<div class="col-9">
-					<select name="invoice_queue[product_type_id]" class="form-control">
+				<div class="col-6">
+					<select name="invoice_queue[product_type_id]" class="form-select">
 						{% for product_type in product_types %}
 							<option value="{{ product_type.id }}" {% if invoice_queue.product_type_id == product_type.id %}selected{% endif %}>{{ product_type.name }}</option>
 						{% endfor %}
@@ -70,30 +70,30 @@
 				</div>
 			</div>
 
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "Description" %}</label>
 				<div class="col-6">
 					<textarea class="form-control autogrow" name="invoice_queue[description]">{{ invoice_queue.description }}</textarea>
 				</div>
 			</div>
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "Qty" %}</label>
-				<div class="col-4">
+				<div class="col-6">
 					<input class="form-control" name="invoice_queue[qty]" value="{{ invoice_queue.qty }}">
 				</div>
 			</div>
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "Price excl VAT" %}</label>
-				<div class="col-4">
+				<div class="col-6">
 					<div class="input-group">
 						<span class="input-group-text">&euro;</span>
 						<input type="text" name="invoice_queue[price]" class="form-control" value="{{ invoice_queue.price }}" >
 					</div>
 				</div>
 			</div>
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<label class="col-3 col-form-label text-end">{% trans "VAT" %}</label>
-				<div class="col-4">
+				<div class="col-6">
 					<select name="invoice_queue[vat]" class="form-control">
 					{% for vat_rate in vat_rates %}
 						<option value="{{ vat_rate.vat }}"{% if vat_rate.vat_rate_id == invoice_queue.vat_rate_id %} selected{% endif %}>{{ vat_rate.vat }}%</option>
@@ -101,7 +101,7 @@
 					</select>
 				</div>
 			</div>
-			<div class="row mb-3">
+			<div class="row mb-1 mb-md-3">
 				<div class="col-3 offset-3">
 					<button class="btn btn-primary">
 						{% trans "Save" %}
