--- a/app/admin/template/sales/invoice/queue/recurring/modal.customer_contacts.twig
+++ b/app/admin/template/sales/invoice/queue/recurring/modal.customer_contacts.twig
@@ -9,13 +9,9 @@
 <form action="/sales/invoice/queue/recurring?action=edit&id={{ invoice_queue_recurring_group.id }}" method="post">
 <div class="row">
 	{% for customer_contact in invoice_queue_recurring_group.customer.get_active_customer_contacts %}
-		<div class="col-4 customer_contact" id="customer-contact-{{ customer_contact.id }}">
-			<div class="card">
-				<div class="card-body{% if invoice_queue_recurring_group.customer_contact_id == customer_contact.id %} bg-info{% endif %}">
-					<div class="pull-left">
-						<input type="radio" name="customer_contact" {% if invoice_queue_recurring_group.customer_contact_id == customer_contact.id %}checked{% endif %}/>
-					</div>
-
+		<div class="col-4 mb-3 h-100">
+			<div class="card customer_contact {% if invoice_queue_recurring_group.customer_contact_id == customer_contact.id %}border-primary{% endif %}" data-customer-contact-id="{{ customer_contact.id }}">
+				<div class="card-body">
 					{{ base.customer_contact(customer_contact, settings) }}
 				</div>
 			</div>
@@ -28,11 +24,9 @@
 <script type="text/javascript">
 	$('.customer_contact').on({
 		click: function() {
-			$('.customer_contact').find('input[type=radio]').prop('checked', false);
-			$('.customer_contact').find('.card-body').removeClass('bg-info');
-			$(this).find('.card-body').first().addClass('bg-info');
-			$('#customer_contact_id').val($(this).prop('id').replace('customer-contact-', ''));
-			$(this).find('input[type=radio]').prop('checked', true);
+			$('.customer_contact').removeClass('border-primary');
+			$('#customer_contact_id').val($(this).data('customer-contact-id'));
+			$(this).addClass('border-primary');
 		}
 	});
 </script>
@@ -41,5 +35,5 @@
 
 {% block footer %}
 	<button type="submit" class="btn btn-primary" onclick="$(this).closest('.modal-content').find('form').submit();">{% trans "Save" %} </button>
-	<button type="button" class="btn btn-default" data-dismiss="modal">{% trans "Cancel" %}
+	<button type="button" class="btn btn-light" data-bs-dismiss="modal">{% trans "Cancel" %}
 {% endblock footer %}
