--- a/app/admin/template/setting/extractor/pdf/fingerprint.twig
+++ b/app/admin/template/setting/extractor/pdf/fingerprint.twig
@@ -12,7 +12,7 @@
 <div class="card">
 	<div class="card-header">{% trans "Manage fingerprints" %}</div>
 	<div class="card-body">
-		<div class="row mb-3">
+		<div class="row mb-1 mb-md-3">
 			<div class="col-8">
 				<img src="/picture?id={{ extractor_pdf.document.preview_file_id }}" />
 			</div>
