--- a/app/admin/template/setting/extractor/transaction.twig
+++ b/app/admin/template/setting/extractor/transaction.twig
@@ -28,7 +28,7 @@
 			<div class="card-body">
 				<form class="form form-horizontal form-condensed" method="post" action="/setting/extractor/transaction?action=edit&id={{ extractor.id }}">
 
-					<div class="row mb-3{% if 'name' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'name' in errors|keys %} has-error{% endif %}">
 						<label for="name" class="col-form-label col-3 text-end">{% trans "Name" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[name]" id="name" class="form-control" value="{{ extractor.name }}">
@@ -36,7 +36,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
 						<label for="fingerprint_message" class="col-form-label col-3 text-end">{% trans "Message contains" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_message]" id="fingerprint_message" class="form-control" value="{{ extractor.fingerprint_message }}">
@@ -44,7 +44,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
 						<label for="fingerprint_other_account_name" class="col-form-label col-3 text-end">{% trans "Other name contains" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_name]" id="fingerprint_other_account_name" class="form-control" value="{{ extractor.fingerprint_other_account_name }}">
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
 						<label for="fingerprint_other_account_number" class="col-form-label col-3 text-end">{% trans "Other account number contains" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_number]" id="fingerprint_other_account_number" class="form-control" value="{{ extractor.fingerprint_other_account_number }}">
@@ -60,7 +60,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
@@ -95,14 +95,14 @@
 					{% trans "If no link is possible, return false" %}
 				</div>
 				<div class="alert alert-danger hide" id="eval_error"></div>
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<textarea class="form-control autogrow code" id="eval">{{ extractor.eval }}</textarea>
 				</div>
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<button type="button" class="btn btn-primary" onclick="run_eval();">{% trans "Run" %}</button>
 				</div>
 
-				<div class="row mb-3 hide" id="parsed_content">
+				<div class="row mb-1 mb-md-3 hide" id="parsed_content">
 					<div class="card">
 						<div class="card-header">{% trans "Data" %}</div>
 						<div class="card-body" id="data"></div>
@@ -184,31 +184,31 @@
 						{% trans "You are about to create an extractor for the following bank account transaction" %}:
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-form-label col-3 text-end">{% trans "Transaction to" %}</label>
 						<div class="col-9"><p class="form-control-static">{{ transaction.other_account_name }}</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-form-label col-3 text-end">{% trans "Account number" %}</label>
 						<div class="col-9"><p class="form-control-static">{{ transaction.other_account_number|iban_to_human_format }}</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-form-label col-3 text-end">{% trans "Transaction message" %}</label>
 						<div class="col-9"><p class="form-control-static">
 						{% if transaction.structured_message != '' %}{{ transaction.structured_message }}{% else %}{{ transaction.message }}{% endif %}
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-form-label col-3 text-end">{% trans "Amount" %}</label>
 						<div class="col-9"><p class="form-control-static">&euro;{{ transaction.amount }}</div>
 					</div>
 
 					<hr />
 
-					<div class="row mb-3{% if 'name' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'name' in errors|keys %} has-error{% endif %}">
 						<label for="name" class="col-form-label col-3 text-end">{% trans "Name" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[name]" id="name" class="form-control" value="{{ env.post.extractor.name }}">
@@ -216,7 +216,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'fingerprint_message' in errors|keys %} has-error{% endif %}">
 						<label for="fingerprint_message" class="col-form-label col-3 text-end">{% trans "Message contains" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_message]" id="fingerprint_message" class="form-control" value="{{ env.post.extractor.fingerprint_message }}">
@@ -224,7 +224,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'fingerprint_other_account_name' in errors|keys %} has-error{% endif %}">
 						<label for="fingerprint_other_account_name" class="col-form-label col-3 text-end">{% trans "Other name contains" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_name]" id="fingerprint_other_account_name" class="form-control" value="{{ env.post.extractor.fingerprint_other_account_name }}">
@@ -232,7 +232,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
+					<div class="row mb-1 mb-md-3{% if 'fingerprint_other_account_number' in errors|keys %} has-error{% endif %}">
 						<label for="fingerprint_other_account_number" class="col-form-label col-3 text-end">{% trans "Other account number contains" %}</label>
 						<div class="col-9">
 							<input type="text" name="extractor[fingerprint_other_account_number]" id="fingerprint_other_account_number" class="form-control" value="{{ env.post.extractor.fingerprint_other_account_number }}">
@@ -240,7 +240,7 @@
 						</div>
 					</div>
 
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
@@ -274,13 +274,13 @@
 			</div>
 			<div class="card-body">
 				<form method="post" action="/setting/extractor/transaction" class="form-horizontal">
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<label class="col-form-label col-3 text-end">{% trans "Search" %}</label>
 						<div class="col-5">
 							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
 						</div>
 					</div>
-					<div class="row mb-3">
+					<div class="row mb-1 mb-md-3">
 						<div class="col-3 offset-3">
 							<button class="btn btn-primary">
 								{% trans "Search" %}
