--- a/app/admin/template/setting/mailscanner.twig
+++ b/app/admin/template/setting/mailscanner.twig
@@ -18,28 +18,28 @@
 			{% endif %}
 
 			<form action="/setting/mailscanner" method="post" class="form-horizontal form-condensed">
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<label class="col-form-label col-3 text-end">{% trans "IMAP server" %}</label>
 					<div class="col-9">
 						<input type="text" class="form-control" name="setting[mailscanner_host]" value="{{ settings.mailscanner_host }}" />
 					</div>
 				</div>
 
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<label class="col-form-label col-3 text-end">{% trans "IMAP username" %}</label>
 					<div class="col-9">
 						<input type="text" class="form-control" name="setting[mailscanner_username]" value="{{ settings.mailscanner_username }}" />
 					</div>
 				</div>
 
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<label class="col-form-label col-3 text-end">{% trans "IMAP password" %}</label>
 					<div class="col-9">
 						<input type="text" class="form-control" name="setting[mailscanner_password]" value="{{ settings.mailscanner_password }}" />
 					</div>
 				</div>
 
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<label class="col-form-label col-3 text-end">{% trans "Mailbox status" %}</label>
 					<div class="col-9">
 						<p class="form-control-plaintext">
@@ -52,7 +52,7 @@
 					</div>
 				</div>
 
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<label class="col-form-label col-3 text-end">{% trans "Last check" %}</label>
 					<div class="col-9">
 						<p class="form-control-plaintext">
@@ -61,7 +61,7 @@
 					</div>
 				</div>
 
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<label class="col-form-label col-3 text-end">{% trans "Keep mails in mailbox" %}</label>
 					<div class="col-9">
 						<div class="form-check form-switch form-control-plaintext">
@@ -69,7 +69,7 @@
 					</div>
 				</div>
 
-				<div class="row mb-3">
+				<div class="row mb-1 mb-md-3">
 					<div class="col-9 offset-3">
 						<button type="submit" class="btn btn-primary">{% trans "Save" %}</button>
 					</div>
